src/app/components/game-components/game-component/game-component.scss
.base {
    stroke: var(--base-stroke);
    stroke-width: 8;
    fill: var(--spaces-fill);
    stroke-linecap: butt;
    stroke-linejoin: round;
}
.manual-stroke {
    stroke-width: 0;
}
.base.manual-stroke {
    fill: var(--base-stroke);
}
.base-no-stroke {
    stroke: none;
    stroke-width: 0;
    fill: var(--base-stroke);
}
.base-no-fill {
    stroke: var(--base-stroke);
    stroke-width: 8;
}
.arrow {
    stroke: var(--base-stroke);
    stroke-width: 3;
}
.text {
    fill: var(--base-stroke);
}
.white-background {
    fill: white;
}
.white-stroke {
    stroke: white;
}
.background {
    fill: var(--spaces-fill);
}
.transparent {
    opacity: 0;
}
.background2 {
    fill: var(--alt-background-fill);
}
.background3 {
    fill: var(--alt-alt-background-fill);
}
.player0-fill {
    fill: var(--player0);
}
.player0-alternate-fill {
    fill: var(--player0-alternate);
}
.player0-stroke {
    stroke: var(--player0);
}
.player1-fill {
    fill: var(--player1);
}
.player1-alternate-fill {
    fill: var(--player1-alternate);
}
.player1-stroke {
    stroke: var(--player1);
}
.nonplayer-fill {
    fill: var(--nonplayer);
}
.nonplayer-light-fill {
    fill: var(--nonplayer-light);
}
.nonplayer-stroke {
    stroke: var(--nonplayer);
}
.dashed-stroke {
    stroke-dasharray: 2;
}
.pre-captured-fill {
    fill: var(--pre-captured);
}
.captured-fill {
    fill: var(--captured);
}
.captured-alternate-fill {
    fill: var(--alt-captured);
}
.captured-stroke {
    stroke: var(--captured);
}
.moved-fill {
    fill: var(--moved);
}
.moved-stroke {
    stroke: var(--moved);
}
.indicator {
    fill: var(--indicator);
    stroke: none;
}
.indicator-fill {
    fill: var(--indicator);
}
.selectable-fill {
    fill: var(--selectable);
}
.selectable-stroke {
    stroke: var(--selectable);
}
.selectable > .base-no-stroke {
    fill: var(--selectable);
}
.last-move-stroke {
    stroke: var(--last-move);
}
.last-move-stroke.manual-stroke {
    fill: var(--last-move);
}
.victory-fill {
    fill: var(--victory);
}
.victory-stroke {
    stroke: var(--victory);
}
.victory-stroke.manual-stroke {
    fill: var(--victory);
}
.selected-fill {
    fill: var(--selected);
}
.selected-stroke {
    stroke: var(--selected);
}
.clickable-stroke {
    stroke: var(--clickable);
}
.clickable-stroke-hover:hover {
    stroke: var(--clickable);
}
.capturable-stroke {
    stroke-width: 2;
    stroke: var(--capturable);
}
.capturable-fill {
    fill: var(--capturable);
}
.capturable-stroke:hover {
    stroke-width: 8;
}
.no-fill {
    fill: none;
}
.no-stroke {
    stroke: none;
}
.small-stroke {
    stroke-width: 2;
}
.mid-small-stroke {
    stroke-width: 3;
}
.mid-stroke {
    stroke-width: 5;
}
.normal-stroke {
    stroke-width: 8;
}
.semi-transparent {
    fill-opacity: 0.5;
    stroke-opacity: 0.5;
}
.round {
    stroke-linecap: round;
}
.text-giant {
    fill: var(--base-stroke);
    font: 3.7rem sans-serif;
    stroke-width: 0.37rem;
    dominant-baseline: central;
}
.text-big {
    font: 50px sans-serif;
}
.text-medium {
    font: 35px sans-serif;
}
.text-20 {
    font: 20px sans-serif;
}
.text-bold {
    font-weight: bold;
}
.text-center {
    text-anchor: middle;
}
.black-fill {
    fill: black;
}
.darker {
    filter: brightness(80%);
}
.lighter {
    filter: brightness(110%);
}
svg {
    max-height: calc(100vh - 10rem); /* Full height minus the navbar */
}

